# AsQu

./: .gitignore  README.ko.md  README.md  test.sh
.claude-plugin/: marketplace.json
.claude/skills/asqu/: SKILL.md
app/: Cargo.toml  tauri.conf.json
app/frontend/: index.html
app/frontend/css/: style.css
app/frontend/js/: app.js  events.js  render-inspector.js  render-question.js  session-panel.js  state.js  tauri-bridge.js
app/src/: cli.rs  lib.rs  main.rs  question_store.rs  state.rs  types.rs
app/src-tauri/src/: lib.rs
app/src/ipc/: handlers.rs  mod.rs  server.rs  types.rs
app/src/js/: app.js  state.js  tauri-bridge.js
app/src/mcp/: mod.rs  tools.rs  transport.rs
app/src/tests/: handlers.rs  mod.rs  question_store.rs
app/src/ui/: commands.rs  mod.rs  window.rs
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json  session-start
plugin/skills/deep-dive/: SKILL.md
plugin/skills/guide/: SKILL.md
server/src/: instructions.ts  mcp-server.ts  question-store.ts  types.ts
src/: index.html
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs  state.rs
src-tauri/src/mcp/: tools.rs
src-tauri/src/ui/: commands.rs
src/js/: app.js  render-question.js  state.js  tauri-bridge.js
