[package]
name = "asqu"
version = "0.1.0"
edition = "2024"
description = "Async question queue — MCP server with Tauri UI"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

rmcp = { version = "1.1", features = ["server", "macros", "transport-io"] }
schemars = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
