[package]
name = "asqu"
version = "0.2.0"
edition = "2024"
description = "Async question queue — InoIPC/InoCLI CLI server with Tauri UI"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }

inoipc = { git = "file:///K:/KHJ%20Folder/DEV/InoIPC" }
inocli = { git = "file:///K:/KHJ%20Folder/DEV/InoCLI" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Console"] }
